[REF | +] refactoring code, shadcn, admin, axios, redux toolkit, config

--- a/booking-ui/src/i18n/locales/en.json
+++ b/booking-ui/src/i18n/locales/en.json
@@ -43,6 +43,8 @@
 
   "header": {
     "home": "Home",
+    "hotels": "Hotels",
+    "admin": "Admin",
     "about": "About",
     "contact": "Contact",
     "login": "Sign In",
