--- a/booking-ui/src/i18n/locales/vi.json
+++ b/booking-ui/src/i18n/locales/vi.json
@@ -43,6 +43,8 @@
 
   "header": {
     "home": "Trang chủ",
+    "hotels": "Khách sạn",
+    "admin": "Quản trị",
     "about": "Giới thiệu",
     "contact": "Liên hệ",
     "login": "Đăng nhập",
